--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   "dependencies": {
     "@artsy/backbone-mixins": "2.0.0",
     "@artsy/cohesion": "4.18.0",
+    "@artsy/eigen-web-association": "^1.1.1",
     "@artsy/express-reloadable": "1.6.0",
     "@artsy/fresnel": "3.0.2",
     "@artsy/gemup": "0.1.0",
@@ -102,7 +103,6 @@
     "@styled-system/theme-get": "5.1.2",
     "accounting": "0.4.1",
     "analytics-node": "2.4.1",
-    "artsy-eigen-web-association": "git://github.com/artsy/artsy-eigen-web-association.git",
     "artsy-ezel-components": "artsy/artsy-ezel-components",
     "autosuggest-highlight": "3.1.1",
     "backbone": "1.3.3",
