--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "bundle-stats": "GENERATE_STATS_FILE=true yarn bundle-report:client && npx relative-ci-agent",
     "clean": "scripts/clean.sh",
     "clean:relay": "rm -rf '$TMPDIR'/RelayFindGraphQLTags-*",
-    "cypress:run": "./node_modules/.bin/cypress run",
-    "cypress": "./node_modules/.bin/cypress open",
     "danger:ci": "yarn danger ci --verbose",
     "dead-code": "./scripts/check-dead-code.sh",
     "dead-code:production": "./scripts/check-dead-code.sh production",
@@ -54,9 +52,7 @@
     "sync-schema": "scripts/sync-schema-pull.sh",
     "sync-schema-local": "scripts/sync-schema-local.sh",
     "test": "scripts/jest.sh",
-    "test:smoke": "npx cypress run",
-    "test:smoke:spec": "npx cypress run --spec",
-    "test:smoke2": "npx playwright test",
+    "test:smoke": "npx playwright test",
     "type-check": "tsc",
     "storybook": "storybook dev -p 6006"
   },
@@ -255,7 +251,6 @@
     "chai": "4.0.0",
     "chai-passport-strategy": "^3.0.0",
     "concurrently": "^6.2.0",
-    "cypress": "10.7.0",
     "danger": "^10.9.0",
     "husky": "3.0.5",
     "jest": "^29.5.0",
