--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -180,9 +180,7 @@ jobs:
           name: Run Playwright Smoke Tests on Live Environment
           command: |
             TESTS=$(circleci tests glob "playwright/e2e/**/*" | circleci tests split | paste -sd ' ')
-            npx playwright test $TESTS --config playwright.config.ts
-          environment:
-            PLAYWRIGHT_BASE_URL: $SMOKE_TEST_TARGET
+            PLAYWRIGHT_BASE_URL=$SMOKE_TEST_TARGET npx playwright test $TESTS --config playwright.config.ts
       - store_artifacts:
           path: playwright-report
       - store_artifacts:
