--- a/.github/workflows/run-danger.yml
+++ b/.github/workflows/run-danger.yml
@@ -1,5 +1,4 @@
 name: ☢️ Yarn
-
 on:
   pull_request:
     types: [opened, synchronize, edited, review_requested, review_request_removed, labeled, unlabeled, milestoned, demilestoned]
@@ -8,5 +7,4 @@ jobs:
   danger-yarn:
     uses: artsy/duchamp/.github/workflows/run-yarn.yml@main
     with:
-      github-token: ${{ secrets.GITHUB_TOKEN }}
-  
+      github-token: ${{ secrets.DANGERMATTIC_GITHUB_TOKEN }}
