--- a/.github/workflows/run-danger.yml
+++ b/.github/workflows/run-danger.yml
@@ -6,5 +6,5 @@ on:
 jobs:
   danger-yarn:
     uses: artsy/duchamp/.github/workflows/run-yarn.yml@main
-    with:
+    secrets:
       github-token: ${{ secrets.DANGERMATTIC_GITHUB_TOKEN }}
