--- a/.github/workflows/run-danger.yml
+++ b/.github/workflows/run-danger.yml
@@ -3,6 +3,6 @@ on:
   pull_request:
     types: [opened, synchronize, edited, review_requested, review_request_removed, labeled, unlabeled, milestoned, demilestoned]
 
-jobs:
+jobs: #comment
   danger-yarn:
     uses: artsy/duchamp/.github/workflows/run-yarn-2.yml@main
