--- a/.github/workflows/run-danger.yml
+++ b/.github/workflows/run-danger.yml
@@ -6,3 +6,5 @@ on:
 jobs:
   danger-yarn:
     uses: artsy/duchamp/.github/workflows/run-yarn.yml@test-danger-token
+    secrets:
+      danger-token: "fake-token"
